--- a/static/css/usuarios/base/style.css
+++ b/static/css/usuarios/base/style.css
@@ -8,13 +8,13 @@ body{
     background-color: #035C8B;
 }
 
-a {
+.link {
     text-decoration: none;
     color: #fff;
     font-weight: 700;
 }
 
-a:hover {
+.link:hover {
     text-decoration: underline;
     color: #fff;
 }
@@ -34,10 +34,4 @@ a:hover {
     font-size: 1.2rem;
     color: #fff;
     margin-left: 20px;
-}
-
-.btn{
-    margin-top: 40px;
-    font-weight: 700;
-    font-size: 3rem;
 }
